# ImguiTemplate

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
imgui/: imgui_impl_sdlrenderer2.cpp
include/: window.hpp
src/: main.cpp  window.cpp
